[package]
name = "aggregate_noobest"
version = "0.1.0"
authors = ["kawaemon <34652535+kawaemon@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.8.6"
chrono = "0.4.11"
serde = "1.0.112"
serde_yaml = "0.8.13"
egg-mode = "0.15.0"
tokio = { version = "0.2.21", feature = "time" }
