[package]
name = "aggregate_noobest"
version = "0.1.0"
authors = ["kawaemon <34652535+kawaemon@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.11", features = ["serde"] }
serde = "1.0.112"
serde_yaml = "0.8.13"
egg-mode = { version = "0.15.0", default-features = false, features = ["rustls"] }
tokio = { version = "0.2.21", features = ["full"] }
readonly = "0.1.6"
async-trait = "0.1.36"
mongodb = "1.0.0"
log = "0.4.8"
simple_logger = "1.6.0"
thiserror = "1.0.20"
anyhow = "1.0.31"
